force-app/main/default/objects/Opportunity/fields/Do_Not_Apply_Round_Robin_User_Here__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Apply_Round_Robin_User_Here__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Apply Round Robin User Here abc</label>
    <type>Checkbox</type>
</CustomField>