force-app/main/default/objects/Opportunity/fields/Re_Assigned_Using_User__c.field-meta.xml
<CustomField>
    <fullName>Re_Assigned_Using_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Assigned Using User</label>
    <type>Checkbox</type>
</CustomField>