force-app/main/default/objects/Opportunity/fields/User_Assigned_By_RRD__c.field-meta.xml
<CustomField>
    <fullName>User_Assigned_By_RRD__c</fullName>
    <label>User Assigned By RRD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test1</fullName>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>